# Kratos

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  configure.sh  nightly_build.yml
applications/: CMakeLists.txt
applications/CompressiblePotentialFlowApplication/: compressible_potential_flow_application.cpp  compressible_potential_flow_application.h  compressible_potential_flow_application_variables.cpp  compressible_potential_flow_application_variables.h
applications/ConstitutiveLawsApplication/: constitutive_laws_application.cpp  constitutive_laws_application.h
applications/ContactStructuralMechanicsApplication/: contact_structural_mechanics_application.cpp  contact_structural_mechanics_application_variables.cpp  contact_structural_mechanics_application_variables.h
applications/DEMApplication/: CMakeLists.txt  DEM_application.cpp  DEM_application.h  DEM_application_variables.h
applications/FluidDynamicsApplication/: CMakeLists.txt  fluid_dynamics_application.cpp  fluid_dynamics_application.h  fluid_dynamics_application_variables.cpp  fluid_dynamics_application_variables.h
applications/FluidTransportApplication/: CMakeLists.txt
applications/GeoMechanicsApplication/: CMakeLists.txt  geo_mechanics_application.cpp  geo_mechanics_application_variables.cpp  geo_mechanics_application_variables.h  settlement_test_app.cpp
applications/HDF5Application/: CMakeLists.txt  hdf5_application.cpp  hdf5_application_variables.cpp  hdf5_application_variables.h
applications/LinearSolversApplication/: CMakeLists.txt
applications/MappingApplication/: mapping_application.cpp  mapping_application.h  mapping_application_variables.cpp  mapping_application_variables.h
applications/MeshingApplication/: CMakeLists.txt
applications/OptimizationApplication/: CMakeLists.txt  optimization_application.cpp  optimization_application_variables.cpp  optimization_application_variables.h
applications/PfemFluidDynamicsApplication/: pfem_fluid_dynamics_application.cpp  pfem_fluid_dynamics_application_variables.cpp  pfem_fluid_dynamics_application_variables.h
applications/PlasmaDynamicsApplication/: CMakeLists.txt  plasma_dynamics_application.cpp  plasma_dynamics_application.h
applications/PoromechanicsApplication/: CMakeLists.txt  poromechanics_application.cpp  poromechanics_application.h  poromechanics_application_variables.cpp  poromechanics_application_variables.h
applications/RomApplication/: CMakeLists.txt  RomApplication.py  rom_application.cpp  rom_application_variables.cpp  rom_application_variables.h
applications/StructuralMechanicsApplication/: structural_mechanics_application.cpp  structural_mechanics_application.h  structural_mechanics_application_variables.cpp  structural_mechanics_application_variables.h
external_libraries/CppBenchmark/: CMakeLists.txt  LICENSE
external_libraries/CppBenchmark/include/: OptionParser.h
external_libraries/CppBenchmark/source/: OptionParser.cpp
external_libraries/doctest/: README.md  (+2 more)
kratos/: CMakeLists.txt  KratosMultiphysics.json
scripts/: standard_configure.sh
(+717 files in other folders)
